
Moqui Framework Release Notes

===========================================================================
Release 1.6.2 - TBD
===========================================================================

Moqui Framework 1.6.2 is a minor new feature and bug fix release.

TODO

Non Backward Compatible Changes

- Removed the TenantCurrency, TenantLocale, TenantTimeZone, and
  TenantCountry entities; they aren't generally used and better not to have
  business settings in these restricted technical config entities

New Features

- Many performance improvements based on profiling; cached entities finds
  around 5x faster, non cached around 2x faster
- Added JDBC Connection stash by tenant, entity group, and transaction,
  can be disabled with transaction-facade.@use-connection-stash=false in
  the Moqui Conf XML file
- Many code cleanups and more CompileStatic with XML handling using new
  MNode class instead of Groovy Node; UserFacadeImpl and
  TransactionFacadeImpl much cleaner with internal classes for state
- Added tools.@empty-db-load attribute with data file types to load on
  startup (through webapp ContextListener init only) if the database is
  empty (no records for moqui.basic.Enumeration)
- If the moqui.conf property (system property, command line, or in
  MoquiInit.properties) starts with a forward slash ('/') it is now
  considered an absolute path instead of relative to the runtime directory
  allowing a conf file outside the runtime directory (an alternative
  to using ../)
- UserAccount.userId and various other ID fields changed from id-long to id
  as userId is only an internal/sequenced ID now, and for various others
  the 40 char length changed years ago is more than adequate; existing
  columns can be updated for the shorter length, but don't have to be
- Changes to run tests without example component in place (now a component
  separate from moqui-runtime), using the moqui.test and other entities